[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"

[dependencies]
atoi_simd = "0.16.0"
itertools = "0.13.0"
rayon = "1.10.0"
rustc-hash = "2.1.0"
tinyvec = { version = "1.8.0", features = ["std"] }

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }

[[bench]]
name = "puzzles"
harness = false
